--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       </div>
       <div class="cell">
       <div class="grid-x">
-        <div class="cell medium-2">
+        <div class="cell medium-2 hide-for-small-only">
           <p class="header__text">Генеральный<br>информационный партнер</p>
         </div>
         <div class="cell medium-10 hide-for-small-only aligned">
           <p class="header__text">Информационные партнеры</p>
         </div>
-        <div class="cell medium-2 logo-container">
+        <div class="cell medium-2 logo-container hide-for-small-only">
           <a href="#" class="logo logo--partner-1">Rusbase</a>
         </div>
-        <div class="cell medium-10 hide-for-medium aligned">
+        <div class="cell medium-10 hide-for-medium aligned hide-for-small-only">
           <p class="header__text">Информационные партнеры</p>
         </div>
-        <div class="cell medium-10 logo-container">
+        <div class="cell medium-10 logo-container hide-for-small-only">
           <a href="#" class="logo logo--partner-2">TinTech Lab</a>
           <a href="#" class="logo logo--partner-3">StartTrack</a>
           <a href="#" class="logo logo--partner-4">FinTech Power</a>
@@ -114,12 +114,13 @@
           <h3>Портрет аудитории</h3>
         </div>
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>55% аудитории &mdash; это представители молодых компаний</b></p>
-          <div id="chart-portret-1"></div>
+          <b>55% аудитории &mdash; это представители молодых компаний</b>
+          <div class="hide-for-small-only" id="chart-portret-1"></div>
+          <div class="hide-for-medium" id="chart-portret-11"></div>
         </div>
         <div class="cell auto hide-for-small-only"></div>
         <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>только 41% &mdash; FinTech</b></p>
+          <b>только 41% &mdash; FinTech</b>
           <div class="grid-x">
             <div class="cell large-6">
               <p>Среди остальных компаний можно выделить несколько отраслей</p>
@@ -139,13 +140,14 @@
         <div class="cell divider"></div>
 
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Больше всего было представителей небольших компаний &mdash; 3-10 человек, но&nbsp;в&nbsp;целом аудитория сбалансирована</b></p>
+          <b>Больше всего было представителей небольших компаний &mdash; 3-10 человек, но&nbsp;в&nbsp;целом аудитория сбалансирована</b>
           <div id="chart-portret-3"></div>
         </div>
         <div class="cell auto hide-for-small-only"></div>
         <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Несмотря на достаточно молодой возраст, большинство компаний находится на стадии устойчивого развития</b></p>
-          <div id="chart-portret-4"></div>
+          <b>Несмотря на достаточно молодой возраст, большинство компаний находится на стадии устойчивого развития</b>
+          <div class="hide-for-small-only" id="chart-portret-4"></div>
+          <div class="hide-for-medium" id="chart-portret-44"></div>
         </div>
 
         <div class="cell divider divider--dash"></div>
@@ -154,18 +156,19 @@
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <h3>Барьеры</h3>
         </div>
-        <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что&nbsp;никакие барьеры и&nbsp;трудности не&nbsp;мешают развитию их бизнеса</b></p>
+        <div class="cell medium-9 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+          <b>Участники мероприятия настроены оптимистично &mdash; почти 40% считают, что&nbsp;никакие барьеры и&nbsp;трудности не&nbsp;мешают развитию их бизнеса</b>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
 
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <div id="chart-bareri"></div>
+          <div class="hide-for-small-only" id="chart-bareri"></div>
+          <div class="hide-for-medium" id="chart-bareri-1"></div>
         </div>
 
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>1. Отсутствие нормативов и законодательной базы, регулирующих деятельность</b></p>
+          <b>1. Отсутствие нормативов и законодательной базы, регулирующих деятельность</b>
           <p>Мнения участников о достаточности законодательной базы разделились:</p>
           <ul>
             <li>Часть считает, что необходимых законов, нормативов и сертификаций нет и это замедляет развитие бизнеса</li>
@@ -207,7 +210,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>2. Ограниченные возможности в получении финансирования, высокие налоги и&nbsp;отсутствие льгот</b></p>
+            <b>2. Ограниченные возможности в получении финансирования, высокие налоги и&nbsp;отсутствие льгот</b>
             <p>Участники отмечают недостаточный объем венчурного рынка в Москве и отсутствие выгодных кредитных схем</p>
             <p>Среди финансовых барьеров также отмечают высокие налоги и отсутствие каких-либо налоговых льгот для развивающегося бизнеса</p>
             <p>У инвесторов, которые могли бы стать драйверами в развитии стартапов, по мнению участников «нулевая толерантность к риску»: они не хотят вкладываться без гарантий возврата средств</p>
@@ -228,7 +231,7 @@
           </div> -->
 
           <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>3. Сложно находить партнеров и заказчиков</b></p>
+            <b>3. Сложно находить партнеров и заказчиков</b>
             <p>Для ряда участников отсутствие разнообразного нетворка становится препятствием в развитии бизнеса. При этом данная проблема формулируется двояко, в зависимости от того, на кого человек возлагает ответственность за решение проблемы:
             </p>
             <ul>
@@ -259,7 +262,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>4. Взаимодействие с государственными организациями</b></p>
+            <b>4. Взаимодействие с государственными организациями</b>
             <p>Участники отмечают высокий уровень бюрократии при взаимодействии с любыми государственными организациями отсутствие вовлеченности и информированности у чиновников:</p>
             <ul>
               <li>Отсутствие креатива и желания что-то менять</li>
@@ -284,7 +287,7 @@
           </div> -->
 
           <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>5. Внутренние проблемы организации</b></p>
+            <b>5. Внутренние проблемы организации</b>
             <p>Сюда относятся единичные ответы, которые характеризуют трудности, возникающие при построении любого бизнеса:</p>
             <ul>
               <li>Отсутствие квалифицированных кадров</li>
@@ -315,7 +318,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>6. Рынок для продукта плохо развит / клиент не&nbsp;осознает потребность</b></p>
+            <b>6. Рынок для продукта плохо развит / клиент не&nbsp;осознает потребность</b>
             <p>Продукт или услуга компании новая (новым способом решает существующую проблему или решает проблему, которую потенциальный потребитель еще не осознал) и компания тратит много времени на объяснение эффектов и выгод </p>
           </div>
 
@@ -336,18 +339,19 @@
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
           <h3>Меры поддержки</h3>
         </div>
-        <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не&nbsp;знают, что&nbsp;бы&nbsp;могло им помочь, либо&nbsp;считают, что&nbsp;справятся сами</b></p>
+        <div class="cell medium-9 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
+          <b>Предсказуемо, самыми популярными мерами поддержки, которые предлагали участники, стали финансовые меры. Почти четверть не&nbsp;знают, что&nbsp;бы&nbsp;могло им помочь, либо&nbsp;считают, что&nbsp;справятся сами</b>
         </div>
 
         <div class="cell auto hide-for-small-only"></div>
 
         <div class="cell emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <div id="chart-meri"></div>
+          <div class="hide-for-small-only" id="chart-meri"></div>
+          <div class="hide-for-medium" id="chart-meri-1"></div>
         </div>
 
         <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-          <p><b>1. Финансовая поддержка</b></p>
+          <b>1. Финансовая поддержка</b>
           <p>Большая часть участников не конкретизирует, какие именно меры финансовой поддержки могли бы им помочь. В отдельных случаях выделяются:</p>
           <ul>
             <li>Налоговые льготы</li>
@@ -382,7 +386,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>2. Построение каналов коммуникации</b></p>
+            <b>2. Построение каналов коммуникации</b>
             <p>Участники отмечают важность площадок для коммуникации различного формата, которые помогли бы им:</p>
             <ul>
               <li>Знакомиться с партнерами, инвесторами, заказчиками</li>
@@ -412,7 +416,7 @@
           </div> -->
 
           <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>3. Четкие правила игры</b></p>
+            <b>3. Четкие правила игры</b>
             <p>Участники заинтересованы как в понятном и современном законодательстве, так и прозрачных правилах участия в конкурсах</p>
             <p>Среди конкретных предложений были высказаны следующие:</p>
             <ul>
@@ -444,7 +448,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>4. Информационная поддержка и просвещение</b></p>
+            <b>4. Информационная поддержка и просвещение</b>
             <p>Участникам хотели бы узнавать как о новых сервисах и мерах поддержки, так и перспективных направлениях развития рынка: «что сейчас нужно разработать»</p>
             <p>Также отмечают важность просветительской работы среди чиновников и представителей корпораций. Они, по мнению участников, должны ориентироваться в технологической повестке и понимать важность инновационных решений</p>
             <p>Перспективным направлением видится вовлечение в предпринимательство не молодежи, а состоявшихся профессионалов, имеющих достаточно собственных ресурсов для развития стартапа хотя бы до стадии раунда В</p>
@@ -466,7 +470,7 @@
           </div> -->
 
           <div class="cell medium-5 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>5. Госзаказы и поиск клиентов</b></p>
+            <b>5. Госзаказы и поиск клиентов</b>
             <p>Участники заинтересованы в сервисах, которые помогли бы им быстрее находить клиента. Для рынка B2G предлагают расширять и упрощать систему госзаказов. Для B2B и B2C не было высказано конкретных предложений</p>
           </div>
 
@@ -486,7 +490,7 @@
           </div> -->
 
           <div class="cell medium-6 emerge" data-effect="relax" data-scale=".5" data-origin="bottom" data-expose="true">
-            <p><b>6. Развитие кадров и компетенций</b></p>
+            <b>6. Развитие кадров и компетенций</b>
             <p>Участники встречи сделали фокус не только на развитии компетенций стартаперов (в первую очередь, предпринимательских), но на подготовке и повышении квалификации инвесторов</p>
           </div>
 
