--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>Стартап кафе</title>
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Анализ рынка гибких рабочих пространств Москвы: спрос и предложение">
-  <meta property="og:description" content="Анализ рынка гибких рабочих пространств Москвы: спрос и предложение">
-  <meta name="description" content="Анализ рынка гибких рабочих пространств Москвы: спрос и предложение">
+  <meta property="og:title" content="Стартап Кафе FinTech">
+  <meta property="og:description" content="Стартап Кафе FinTech">
+  <meta name="description" content="Стартап Кафе FinTech">
   <meta property="vk:image" content="">
   <meta property="twitter:image" content="">
   <meta property="og:image" content="">
@@ -19,22 +19,14 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="src/img/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="src/img/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="src/img/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="src/img/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="src/img/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="src/img/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="src/img/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="src/img/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="src/img/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="src/img/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="src/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="src/img/favicon-96x96.png">
-  <link rel="manifest" href="src/img/manifest.json">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#e4ebf9">
+  <meta name="theme-color" content="#e4ebf9">
+  
   <link rel="stylesheet" href="src/css/foundation.min.css">
   <link rel="stylesheet" href="src/css/styles.css">
   <link rel="stylesheet" href="src/css/charts.css">
